--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.2d.spriteshape": "3.0.12",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ide.vscode": "1.2.1",
+    "com.unity.inputsystem": "1.0.0",
     "com.unity.textmeshpro": "2.0.1",
     "com.unity.timeline": "1.2.15",
     "com.unity.ugui": "1.0.0",
